# ipf-predict-arima

./: .env.example  Dockerfile  config.py  database.py  generate_model_train.py  main.py  model.py  non_vibration_train.py  predict.py  predict_detail.py  pyproject.toml  readme.md  time_series.py  train.py  vibration_train.py
