[tool.poetry]
name = "ipf-predict-arima"
version = "0.1.0"
description = ""
authors = ["Perdana Main <firman.fp123@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
psycopg2-binary = "^2.9.10"
scikit-learn = "^1.5.2"
python-dotenv = "^1.0.1"
numpy = "^2.1.3"
matplotlib = "^3.9.2"
statsmodels = "^0.14.4"
pandas = "^2.2.3"
joblib = "^1.4.2"
apscheduler = "^3.11.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
